NEW IMG FORMAT PNG TO WEBP

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="Assets/CSS/styles.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.webp" type="image/webp">
 
     <!-- Schema.org Markup for Local Business (JSON-LD) - Para la HOME -->
     <script type="application/ld+json">
@@ -33,7 +33,7 @@
       "@type": "LocalBusiness",
       "name": "SATEKOR Telecomunicaciones",
       "description": "Empresa especializada en instalación y mantenimiento de telecomunicaciones, videovigilancia para empresas, fibra óptica, infraestructura crítica, IoT y conexión a internet rural en la provincia de Almería.",
-      "image": "https://www.satekor.es/Assets/Imagenes/logoB.png",
+      "image": "https://www.satekor.es/Assets/Imagenes/logoB.webp",
       "url": "https://www.satekor.es/",
       "telephone": "+34642531300",
       "email": "info@satekor.es",
@@ -88,7 +88,7 @@
         <div class="container header-content">
             <!-- Logo SATEKOR -->
             <a href="index.html" class="logo">
-                <img src="Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
+                <img src="Assets/Imagenes/logoB.webp" alt="Logo SATEKOR Telecomunicaciones Almería">
             </a>
             <!-- Botón Hamburguesa -->
             <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
@@ -273,17 +273,17 @@
                 <div class="logos-ticker-wrap">
                     <div class="logos-ticker-track">
                         <!-- Logos (copia 1) -->
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.png" alt="Logo Circet"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.png" alt="Logo Grupo Control"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.png" alt="Logo MasOrange"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.png" alt="Logo Verne Technology Group"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.png" alt="Logo Yoigo"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.webp" alt="Logo Circet"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.webp" alt="Logo Grupo Control"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.webp" alt="Logo MasOrange"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.webp" alt="Logo Verne Technology Group"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.webp" alt="Logo Yoigo"></div>
                         <!-- Logos (copia 2 para bucle) -->
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.png" alt="Logo Circet"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.png" alt="Logo Grupo Control"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.png" alt="Logo MasOrange"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.png" alt="Logo Verne Technology Group"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.png" alt="Logo Yoigo"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.webp" alt="Logo Circet"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.webp" alt="Logo Grupo Control"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.webp" alt="Logo MasOrange"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.webp" alt="Logo Verne Technology Group"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.webp" alt="Logo Yoigo"></div>
                     </div>
                 </div>
             </div>
