--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="Assets/CSS/styles.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.webp" type="image/webp">
+    <link rel="icon" href="Assets/Imagenes/favicon.webp" type="image/webp">
 
     <!-- Schema.org Markup for Local Business (JSON-LD) - Para la HOME -->
     <script type="application/ld+json">
