--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.satekor.es/">
 
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="Assets/Imagenes/favicon.webp" type="image/webp">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,7 +97,7 @@
       "@type": "LocalBusiness",
       "name": "SATEKOR Telecomunicaciones",
       "description": "Empresa especializada en instalación y mantenimiento de telecomunicaciones, videovigilancia para empresas, fibra óptica, infraestructura crítica, IoT y conexión a internet rural en la provincia de Almería.",
-      "image": "https://www.satekor.es/Assets/Imagenes/logoB.png",
+      "image": "https://www.satekor.es/Assets/Imagenes/logoB.webp",
       "url": "https://www.satekor.es/",
       "telephone": "+34642531300",
       "email": "info@satekor.es",
@@ -149,7 +149,7 @@
     <header class="site-header">
         <div class="container header-content">
             <a href="index.html" class="logo">
-                <img src="Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
+                <img src="Assets/Imagenes/logoB.webp" alt="Logo SATEKOR Telecomunicaciones Almería">
             </a>
             <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
                 <span class="hamburger"></span>
@@ -275,16 +275,16 @@
                 <h3 class="ticker-title">Han confiado en nosotros:</h3>
                 <div class="logos-ticker-wrap">
                     <div class="logos-ticker-track">
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.png" alt="Logo Circet"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.png" alt="Logo Grupo Control"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.png" alt="Logo MasOrange"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.png" alt="Logo Verne Technology Group"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.png" alt="Logo Yoigo">
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.png" alt="Logo Circet"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.png" alt="Logo Grupo Control"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.png" alt="Logo MasOrange"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.png" alt="Logo Verne Technology Group"></div>
-                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.png" alt="Logo Yoigo"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.webp" alt="Logo Circet"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.webp" alt="Logo Grupo Control"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.webp" alt="Logo MasOrange"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.webp" alt="Logo Verne Technology Group"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.webp" alt="Logo Yoigo">
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/CIRCET.webp" alt="Logo Circet"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/gcontrol.webp" alt="Logo Grupo Control"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/MASORANGE.webp" alt="Logo MasOrange"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/VERNE.webp" alt="Logo Verne Technology Group"></div>
+                        <div class="logo-slide"><img src="Assets/Imagenes/EMPRESAS/YOIGO.webp" alt="Logo Yoigo"></div>
                     </div>
                 </div>
             </div>
