--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="canonical" href="https://www.satekor.es/">
 
     <link rel="icon" href="Assets/Imagenes/favicon.webp" type="image/webp">
+    <link rel="preload" href="Assets/Imagenes/logoB.webp" as="image">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
