--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <header class="site-header">
         <div class="container header-content">
             <a href="index.html" class="logo">
-                <img src="Assets/Imagenes/logoB.webp" alt="Logo SATEKOR Telecomunicaciones Almería">
+                <img src="Assets/Imagenes/logoB.webp" alt="Logo SATEKOR Telecomunicaciones Almería" fetchpriority="high" width="160" height="50">
             </a>
             <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
                 <span class="hamburger"></span>
