--- a/contacto.html
+++ b/contacto.html
@@ -123,13 +123,14 @@
                 <p class="subtitle">¿Problemas con tu red empresarial? En SATEKOR ofrecemos <strong>soporte técnico urgente</strong> para empresas en toda la provincia de Almería. Atendemos averías y consultas para optimizar tu conexión.</p>
 
                 <!-- Lista de Servicios Vinculados -->
-                <div class="related-services" style="text-align: center; margin-bottom: 2.5rem; font-size: 1.05rem;">
-                    <p style="margin-bottom: 0.8rem; color: var(--color-text-primary); font-weight: 500;">Podemos ayudarte con:</p>
-                    <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 0.5rem 1.5rem;">
-                      <li><i class="fas fa-wrench fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/mantenimiento-redes.html" style="color: var(--color-text-secondary); text-decoration: none;">Reparación urgente de redes</a></li>
-                      <li><i class="fas fa-wifi fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/fibra-optica-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Fibra óptica empresarial</a></li>
-                      <li><i class="fas fa-satellite-dish fa-fw" style="color: var(--color-primary);"></i> <a href="/Servicios/internet-rural.html" style="color: var(--color-text-secondary); text-decoration: none;">Internet en zonas rurales</a></li>
-                       <li><i class="fas fa-video fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/videovigilancia-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Videovigilancia</a></li>
+                <!-- Lista de Servicios Vinculados -->
+                <div class="related-services related-services-container">
+                    <p class="related-services-intro">Podemos ayudarte con:</p>
+                    <ul class="related-services-list">
+                      <li><i class="fas fa-wrench fa-fw related-services-icon"></i> <a href="Servicios/mantenimiento-redes.html" class="related-services-link">Reparación urgente de redes</a></li>
+                      <li><i class="fas fa-wifi fa-fw related-services-icon"></i> <a href="Servicios/fibra-optica-empresas.html" class="related-services-link">Fibra óptica empresarial</a></li>
+                      <li><i class="fas fa-satellite-dish fa-fw related-services-icon"></i> <a href="Servicios/internet-rural.html" class="related-services-link">Internet en zonas rurales</a></li>
+                       <li><i class="fas fa-video fa-fw related-services-icon"></i> <a href="Servicios/videovigilancia-empresas.html" class="related-services-link">Videovigilancia</a></li>
                     </ul>
                 </div>
 
@@ -170,16 +171,17 @@
                 </form>
 
                 <!-- Datos de contacto directo -->
-                 <div class="contact-info" style="text-align: center; margin-top: 3rem; color: var(--color-text-secondary); line-height: 1.8;">
-                    <p style="font-weight: 600; color: var(--color-text-primary); margin-bottom: 0.5rem;">O contáctanos directamente:</p>
-                    <p><i class="fas fa-phone fa-fw" aria-hidden="true"></i> Teléfono: <a href="tel:+34642531300" style="color: var(--color-primary); text-decoration: none; border-bottom: 1px dotted var(--color-primary-darker);">642 53 13 00</a> (Atención Urgente Disponible)</p>
-                    <p><i class="fas fa-envelope fa-fw" aria-hidden="true"></i> Email: <a href="mailto:info@satekor.es" style="color: var(--color-primary); text-decoration: none; border-bottom: 1px dotted var(--color-primary-darker);">info@satekor.es</a></p>
-                    <p><i class="fas fa-map-marker-alt fa-fw" aria-hidden="true"></i> Dirección: 04001 Almería </p>
+                <!-- Datos de contacto directo -->
+                 <div class="contact-info contact-info-container">
+                    <p class="contact-info-header">O contáctanos directamente:</p>
+                    <p><i class="fas fa-phone fa-fw" aria-hidden="true"></i> Teléfono: <a href="tel:+34642531300" class="contact-info-link">642 53 13 00</a> (Atención Urgente Disponible)</p>
+                    <p><i class="fas fa-envelope fa-fw" aria-hidden="true"></i> Email: <a href="mailto:info@satekor.es" class="contact-info-link">info@satekor.es</a></p>
+                    <p><i class="fas fa-map-marker-alt fa-fw" aria-hidden="true"></i> Dirección: Almería, España</p>
                 </div>
 
                 <!-- Mapa de Google Maps -->
                 <div class="map-container">
-                    <h2 style="font-size: 1.5rem; color: var(--color-text-primary); margin-bottom: 1.5rem; text-align: center;">Nuestra Ubicación</h2>
+                    <h2 class="map-title">Nuestra Ubicación</h2>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50921.23992320119!2d-2.488815795413129!3d37.18146604999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd71abbbd09f3a81%3A0x6c19e5a6c9e7b5d5!2zQWxtZXLDrWEsIEVzcGHDsWE!5e0!3m2!1ses!2ses!4v1716936121467!5m2!1ses!2ses"
                         width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
